/*
 * Copyright 2025 Alastair Wyse (https://github.com/alastairwyse/ApplicationAccess/)
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *     http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

 // This file defines messages for all events which represent a historic change in the structure of an AccessManager implementation.
 // The messages contained are the equivalent of those that derive from ApplicationAccess.Persistence.Models.TemporalEventBufferItemBase

syntax = "proto3";

option csharp_namespace = "ApplicationAccess.Hosting.Grpc.Models";

// The type of action associated with events which change the structure of an AccessManager class.
enum EventAction {
	ADD = 0;
	REMOVE = 1;
}

// Represents an event relating to a user.
message UserEventBufferItem {
	bytes event_id = 1;
	EventAction event_action = 2;
	string user = 3;
	Timestamp occurred_time = 4;
	int32 hash_code = 5;
}

// Represents an event relating to a group.
message UserEventBufferItem {
	bytes event_id = 1;
	EventAction event_action = 2;
	string group = 3;
	Timestamp occurred_time = 4;
	int32 hash_code = 5;
}